# light-mattermost-desktop

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
src/: app.d.ts  app.postcss
src-tauri/: Cargo.toml
src-tauri/app/: Cargo.toml
src-tauri/app/src/: commands.rs  errors.rs  main.rs  states.rs  storage.rs
src-tauri/app/src/api/: api.rs  call_event.rs
src-tauri/models/: Cargo.toml
src-tauri/models/src/: lib.rs
src-tauri/src/: commands.rs  errors.rs  main.rs  models.rs  states.rs  storage.rs
src-tauri/src/api/: api.rs  call_event.rs  mod.rs
src-tauri/zbox/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
src-tauri/zbox/.github/workflows/: rust.yml
src-tauri/zbox/src/base/: vio.rs
src-tauri/zbox/src/volume/: mod.rs
src/lib/: AddServer.svelte  Login.svelte  store.ts
src/lib/components/channels/: Channel.svelte  Channels.svelte
src/lib/components/team/: UserTeams.svelte
src/lib/components/ui/: Dropdown.svelte  Sidebar.svelte  SidebarElement.svelte  Tooltip.svelte
src/lib/components/ui/channel_posts/: ChannelPost.svelte  ChannelPosts.svelte
src/lib/components/ui/chat/: Chat.svelte  SubPosts.svelte
src/lib/controllers/: index.ts
src/lib/team/: UserTeams.svelte
src/lib/types/: api.error.model.ts  channel.model.ts  indexed.model.ts  login.model.ts  notify.props.model.ts  post.thread.model.ts  posts.model.ts  server.model.ts  team.member.model.ts  team.model.ts
src/lib/types/ui/posts/: post.collection.model.ts
src/lib/ui/: Dropdown.svelte
src/lib/user/: UserDetails.svelte
src/lib/utils/: order.sorter.util.ts  server.utils.ts
src/lib/utils/toast/: index.ts
src/routes/: +layout.svelte  +layout.ts  +page.server.ts  +page.svelte  +page.ts
src/routes/(app)/: +layout.svelte  +page.svelte  +page.ts
src/routes/(app)/add_server/: +page.svelte
src/routes/(app)/profile/: +page.svelte
src/routes/(app)/server/: +page.svelte
src/routes/(auth)/: +layout.svelte
src/routes/(auth)/login/: +page.svelte  +page.ts
src/routes/add_server/: +layout.svelte  +page.server.ts  +page.svelte  +page.ts
src/routes/login/: +page.server.ts  +page.svelte  +page.ts
src/routes/server/: +page.svelte
src/types/: login.model.ts  team.model.ts
