[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.0", features = [] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
thiserror = "1.0.57"
url = { version = "2.5.0", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["tracing", "serde", "chrono", "json"] }
nutype = { version = "0.4.2", features = ["serde"] }
directories = "5.0.1"
zbox = { version = "0.9.2", features = ["storage-file", "libsodium-bundled"] }
rand = { version = "0.8.5" }
bincode = "1.3.3"

[dev-dependencies]
tempdir = "0.3.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
